[lworld] SubTypeCheckNode::sub asserts with "should be not null"

XMLWordPrintable

      After the fix for JDK-8303279 got merged in, TestNullableInlineTypes.java fails with "-XX:+UnlockDiagnosticVMOptions -XX:-TieredCompilation -XX:+StressArrayCopyMacroNode -XX:+StressCallingConvention -XX:+StressLCM -XX:+StressGCM -XX:+StressCCP -XX:+StressIGVN -XX:+StressReflectiveCode -XX:+StressMethodHandleLinkerInlining -XX:+StressCompiledExceptionHandlers":

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/workspace/open/src/hotspot/share/opto/subtypenode.cpp:37), pid=1380161, tid=1380177
      # assert(sub_t != Type::TOP && !TypePtr::NULL_PTR->higher_equal(sub_t)) failed: should be not null
      #
      # JRE version: Java(TM) SE Runtime Environment (22.0+1) (fastdebug build 22-valhalla+1-13)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 22-valhalla+1-13, mixed mode, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x17574a0] SubTypeCheckNode::sub(Type const*, Type const*) const+0x700

      Current CompileTask:
      C2: 6851 617 b compiler.valhalla.inlinetypes.TestNullableInlineTypes::test82 (86 bytes)

      Stack: [0x00007f89a59fb000,0x00007f89a5afb000], sp=0x00007f89a5af6370, free space=1004k
      Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x17574a0] SubTypeCheckNode::sub(Type const*, Type const*) const+0x700 (subtypenode.cpp:37)
      V [libjvm.so+0x1758088] SubTypeCheckNode::verify(PhaseGVN*)+0xb8 (subtypenode.cpp:201)
      V [libjvm.so+0x17590a3] SubTypeCheckNode::Ideal(PhaseGVN*, bool)+0x323 (subtypenode.cpp:135)
      V [libjvm.so+0x1575420] PhaseIterGVN::transform_old(Node*)+0xc0 (phaseX.cpp:667)
      V [libjvm.so+0x156c098] PhaseIterGVN::optimize()+0x78 (phaseX.cpp:1045)
      V [libjvm.so+0xa2194a] Compile::Optimize()+0x1da (compile.cpp:2726)
      V [libjvm.so+0xa25af8] Compile::Compile(ciEnv*, ciMethod*, int, Options, DirectiveSet*)+0x1ae8 (compile.cpp:863)
      V [libjvm.so+0x871a0b] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x12b (c2compiler.cpp:119)
      V [libjvm.so+0xa313c7] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x977 (compileBroker.cpp:2276)
      V [libjvm.so+0xa320d0] CompileBroker::compiler_thread_loop()+0x5c0 (compileBroker.cpp:1944)
      V [libjvm.so+0xef4bdc] JavaThread::thread_main_inner()+0xcc (javaThread.cpp:721)
      V [libjvm.so+0x17f638a] Thread::call_run()+0xba (thread.cpp:217)
      V [libjvm.so+0x14e0351] thread_native_entry(Thread*)+0x121 (os_linux.cpp:783)

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: