8315744: [lworld] SubTypeCheckNode::sub asserts with "should be not null"